<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_dashboard"
            android:icon="@drawable/ic_nav_dashboard"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/menu_students"
            android:icon="@drawable/ic_nav_students"
            android:title="@string/nav_students" />
        <item
            android:id="@+id/menu_attendance"
            android:icon="@drawable/ic_nav_attendance"
            android:title="@string/nav_attendance" />
        <item
            android:id="@+id/menu_reports"
            android:icon="@drawable/ic_nav_reports"
            android:title="@string/nav_reports" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/logout" />
    </group>
</menu>
